Pd 4003-defect fixes

--- a/src/features/Container/Navbar/Alerts.scss
+++ b/src/features/Container/Navbar/Alerts.scss
@@ -23,34 +23,6 @@
   width: 301px;
 }
 
-.IconButton-delete {
-  margin-bottom: 34px;
-  display: none;
-  svg {
-    font-size: 16px;
-  }
-}
-.ListItem-root {
-  width: 100%;
-  display: flex;
-  position: relative;
-  box-sizing: border-box;
-  text-align: left;
-  align-items: center;
-  padding-top: 11px;
-  padding-bottom: 11px;
-  justify-content: flex-start;
-  text-decoration: none;
-  &:hover {
-    .IconButton-delete {
-      display: block;
-    }
-    .timestamp {
-      display: none;
-    }
-  }
-}
-
 .ListItem-button {
   transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
 }
@@ -60,44 +32,9 @@
   min-width: 0;
   margin-top: 0;
   margin-bottom: 0;
-}
-.Typography-root {
-  margin: 0;
+  max-width: 260px;
 }
 
-.Typography-body2 {
-  color: #000000;
-  font-size: 14px;
-  font-family: Proxima Nova, Nunito Sans, sans-serif;
-  font-weight: 400;
-  line-height: 1.5;
-}
-
-.Typography-body1 {
-  color: #000000;
-  font-size: 16px;
-  font-family: Proxima Nova, Nunito Sans, sans-serif;
-  font-weight: 400;
-  line-height: 1.5;
-}
-
-.Typography-displayBlock {
-  display: block;
-}
-.Typography-gutterBottom {
-  margin-bottom: 0.35em;
-}
-.TouchRipple-root {
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 0;
-  overflow: hidden;
-  position: absolute;
-  border-radius: inherit;
-  pointer-events: none;
-}
 .root {
   width: '100%';
   max-width: 360px;
@@ -109,7 +46,7 @@
 }
 .listItem {
   color: #444444;
-  height: 72px;
+  height: auto;
   outline: none;
   padding-left: 24px;
   // border-bottom: 0.5px solid rgb(128 128 128 / 15%);
@@ -118,24 +55,52 @@
 
 .listItem:hover {
   background-color: #ecf3ff;
-  span {
-    font-weight: 700;
-  }
-  p {
-    font-weight: 600;
-  }
 }
-.listItemTextRoot {
-  margin-top: 30px;
-  padding-left: 0;
-  white-space: nowrap;
+.notification-item {
+  white-space: wrap;
+  padding: 20px;
+  overflow: hidden;
+
+  .notification-content {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+  }
+  .IconButton-delete {
+    position: absolute;
+    right: 17px;
+    top: 8px;
+    display: none;
+    svg {
+      font-size: 16px;
+    }
+  }
+  
+  .timestamp {
+    color: #595959;
+    top: 8px;
+    position: absolute;
+    white-space: nowrap;
+    line-height: 1.71;
+    font-size: 13px;
+    right: 17px;
+  }
+  &:hover {
+    .IconButton-delete {
+      display: block;
+    }
+    .timestamp {
+      display: none;
+    }
+  }
 }
 .listItemTextPrimary {
-  font-size: 14px;
+  font-size: 16px;
   // font-weight: 600;
   color: inherit;
   overflow: hidden;
   text-overflow: ellipsis;
+  width: 260px;
 }
 .listItemTextSecondary {
   width: 310px;
@@ -146,7 +111,7 @@
   line-height: 1.71;
 }
 .listItemNotRead {
-  height: 72px;
+  height: auto;
   padding-left: 24px;
   padding-right: 24px;
   // border-bottom: 0.5px solid rgb(128 128 128 / 15%);
@@ -160,33 +125,16 @@
     height: 10px;
     position: absolute;
     left: 7px;
-    top: 10px;
+    top: 30px;
     border-radius: 20px;
   }
 }
 
 .listItemNotRead:hover {
   background-color: #ecf3ff;
-  span {
-    font-weight: 700;
-  }
-  p {
-    font-weight: 600;
-  }
 }
 
-.timestamp {
-  color: #595959;
-  bottom: 18px;
-  position: relative;
-  white-space: nowrap;
-  line-height: 1.71;
-  font-size: 13px;
-  // IE11-specific selector
-  // @media all and (-ms-high-contrast: none) (-ms-high-contrast: active) {
-  //   right: 48;
-  // }
-}
+
 .icon {
   color: #0557d5;
   min-width: 0;
@@ -205,10 +153,6 @@
 .dayLabelText {
   font-weight: 600;
 }
-.ListItemText-multiline {
-  margin-top: 6px;
-  margin-bottom: 6px;
-}
 
 .notificationHeading {
   padding: 15px;
@@ -219,12 +163,7 @@
 .ReactVirtualized__Grid {
   & > div {
     margin-top: 40px;
-    overflow: visible !important;
   }
-}
-
-.MuiPopover-paper {
-  overflow: visible !important;
 }
 
 .Heading-main {
