--- a/src/features/Container/Protocols/CustomComponents/FontProperties/FontProperties.scss
+++ b/src/features/Container/Protocols/CustomComponents/FontProperties/FontProperties.scss
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   position: sticky;
-  width: calc(100% - 60px);
+  // width: calc(100% - 60px);
   top: 0;
   left: 0px;
   justify-content: flex-start;
