--- a/src/features/Container/Protocols/DigitizedPanel/ActionMenu.scss
+++ b/src/features/Container/Protocols/DigitizedPanel/ActionMenu.scss
@@ -8,9 +8,10 @@
   }
   &.action-edit-menu {
     position: relative;
-    z-index: 9999;
+    z-index: 1;
     margin-right: 0;
     bottom: 30px;
+    margin-top: 30px;
   }
   .open-close {
     display: flex;
