--- a/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
+++ b/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  overflow: scroll;
+  padding-right: 60px;
   .accordion_details_loader {
     height: 60vh;
     // right: 260px;
@@ -65,13 +65,15 @@
   }
   .readable-content-wrapper {
     display: flex;
+    overflow-x: hidden;
+    overflow-y: unset;
   }
   .readable-content {
     height: auto;
     max-height: 60vh;
     flex: 1 1 auto;
     width: 90%;
-    padding-right: 16%;
+    padding-right: 15px;
     min-height: 376px;
     .Preferred-txt {
       color: #0768fd;
