--- a/src/features/Container/Protocols/LabData/LabData.scss
+++ b/src/features/Container/Protocols/LabData/LabData.scss
@@ -5,6 +5,14 @@
         td {
           & > div {
             width: 100% !important;
+            padding: 0;
+            & > div{
+              svg{
+                width: 1em;
+                height: 1em;
+                top: 0;
+              }
+            }
           }
         }
       }
@@ -88,7 +96,6 @@
 
   position: relative;
   & > div:last-child > div:first-child > div:first-child > div:last-child {
-    overflow-x: unset;
     h3 {
       margin: 0 !important;
       padding: 0 !important;
@@ -99,6 +106,12 @@
       font-size: inherit;
       padding: 0 16px;
       z-index: 100;
+      svg{
+        width: 1em;
+        height: 1em;
+        margin-bottom: 0;
+        margin-right: 8px;
+      }
     }
   }
   &.table-hover {
@@ -163,6 +176,7 @@
 }
 .metadata-card
   .lab-table-container
+  tfoot
   tr:last-child
   td:first-child:nth-last-child(1) {
   display: table-cell;
@@ -188,4 +202,7 @@
 
 .lab-table-container > div:last-child > div > div:last-child {
   overflow-x: unset;
+}
+.lab-table-container table tbody tr[class^="EmptyRow"] td{
+  display: table-cell !important;
 }
