--- a/src/features/Container/Protocols/MetaData/MetaData.scss
+++ b/src/features/Container/Protocols/MetaData/MetaData.scss
@@ -42,6 +42,10 @@
       justify-content: center;
     }
   }
+  .metadata-panel-heading {
+    padding: 15px 15px 15px 20px !important;
+    font-weight: 600;
+  }
   .metadat-flex-plus {
     float: left;
   }
