--- a/src/features/Container/Protocols/DigitizedPanel/ActionMenu.scss
+++ b/src/features/Container/Protocols/DigitizedPanel/ActionMenu.scss
@@ -27,7 +27,6 @@
     }
   }
   .menu-items {
-    padding-left: 10px;
     background: #e7f2ff;
     width: 176px;
     height: calc(100% + 30px);
@@ -36,7 +35,7 @@
       background: transparent;
       border: none;
       line-height: 24px;
-      padding: 12px 0;
+      padding: 15px;
       font-size: 14px;
       align-items: center;
       outline: none;
@@ -78,7 +77,7 @@
     }
     fieldset {
       margin: 10px 0;
-      padding: 0;
+      padding-left: 15px;
       border: none;
     }
     svg {
@@ -106,7 +105,6 @@
       background: transparent;
       border: none;
       line-height: 24px;
-      padding: 12px 0;
       font-size: 14px;
       align-items: center;
       outline: none;
