--- a/src/features/Container/Protocols/BladeLeft/BladeLeft copy.scss
+++ b/src/features/Container/Protocols/BladeLeft/BladeLeft copy.scss
@@ -1,22 +1,4 @@
 .bladeContainer {
-  position: absolute;
-  top: 140px;
-  height: calc(100vh - 145px);
-  z-index: 1000;
-  background: #fff;
-  width: 20px;
-  box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.08);
-
-  &.expand {
-    width: 265px;
-  }
-
-  .blade-header {
-    padding: 20px;
-    display: flex;
-    justify-content: space-between;
-  }
-
   .toc-wrapper {
     height: 100%;
     overflow-y: overlay;
@@ -26,12 +8,6 @@
   }
   hr {
     margin-bottom: 0;
-    margin-bottom: 0;
-    border: none;
-    height: 1px;
-    margin: 0;
-    flex-shrink: 0;
-    background-color: #e9e9e9;
   }
 
   [class*='Blade-body-'] {
@@ -48,29 +24,7 @@
 
   h3 {
     padding-left: 20px;
-    padding-left: 20px;
-    font-size: 24px;
-    line-height: 32px;
-    font-weight: 600;
   }
-
-  .expand-button {
-    position: absolute;
-    right: 0;
-    top: 50%;
-    margin-right: -13px;
-    height: 25px;
-    width: 25px;
-    border: 1px solid #ebebeb;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    svg {
-      height: 16px;
-    }
-  }
-
   [class*='Blade-body-'] > div > div {
     background: #f6f7fb;
   }
@@ -107,8 +61,8 @@
   }
 
   [class*='MuiAccordion-root'] {
-    // margin-top: 10px;
-    // background-color: #f6f7fb;
+    margin-top: 10px;
+    background-color: #f6f7fb;
   }
   [class*='MuiAccordionDetails-root-'] {
     padding: 0 0 0px 10px;
@@ -146,13 +100,12 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  margin-top: 6%;
+  margin-top: 14%;
   height: 24px;
   width: 170px;
   color: #000000;
   font-size: 14px;
   letter-spacing: 0;
-  padding-left: 14px;
 }
 
 .search-Box {
