--- a/src/features/Container/Protocols/protocols.scss
+++ b/src/features/Container/Protocols/protocols.scss
@@ -459,6 +459,7 @@
 
   .view-wrapper .digitize-panel-content {
     overflow-y: auto;
+    overflow-x: hidden;
     height: calc(100vh - 210px);
     width: calc(100% - 22px);
     margin-top: -5px;
