--- a/src/features/Container/Protocols/SOA/SOA.scss
+++ b/src/features/Container/Protocols/SOA/SOA.scss
@@ -1,6 +1,6 @@
 .soa-content-holder {
   margin: 16px 48px 0px 5px;
-  width: 100%
+  width: 100%;
 }
 .side-nav {
   width: 200px;
@@ -27,7 +27,7 @@
   color: white !important;
 }
 .arrange-panel-items-setting {
-  background-color: blue;
+  background-color: #0768fd;
   display: flex;
   align-items: center;
   margin-left: auto !important;
@@ -103,6 +103,6 @@
   height: 25px;
   position: absolute;
 }
-.base-column{
+.base-column {
   background-color: red;
 }
