Feature/preferredterm/table

--- a/src/features/Container/Protocols/CustomComponents/PDTable/Components/table.scss
+++ b/src/features/Container/Protocols/CustomComponents/PDTable/Components/table.scss
@@ -72,6 +72,9 @@
 .editable-span {
   width: 90%;
 }
+.Preferred-txt {
+  color: #0768fd;
+}
 .pd-table-empty-cell-row {
   width: 100%;
   display: inline-block;
