--- a/src/features/Container/Protocols/SourcePanel/PdfViewer.scss
+++ b/src/features/Container/Protocols/SourcePanel/PdfViewer.scss
@@ -5,16 +5,12 @@
   width: unset !important;
 }
 
-.react-pdf__Page__textContent span {
+.react-pdf__Page__textContent {
+  color: transparent;
   opacity: 0.5;
 }
-
-.react-pdf__Page__textContent span::selection {
-  background-color: #3297fd;
-}
-
-.react-pdf__Document {
-  line-height: initial;
+.react-pdf__Page__textContent ::selection {
+  background: #3297fd;
 }
 
 .pdf-pagination {
