User id fix / defect 727

--- a/src/features/Container/Protocols/SourcePanel/PdfViewer.scss
+++ b/src/features/Container/Protocols/SourcePanel/PdfViewer.scss
@@ -13,6 +13,14 @@
   background-color: #3297fd;
 }
 
+.react-pdf__Page__textContent {
+  color: transparent;
+  opacity: 0.5;
+}
+.react-pdf__Page__textContent ::selection {
+  background: #3297fd;
+}
+
 .react-pdf__Document {
   line-height: initial;
 }
