--- a/src/features/Container/Protocols/protocols.scss
+++ b/src/features/Container/Protocols/protocols.scss
@@ -458,6 +458,7 @@
   }
 
   .view-wrapper .digitize-panel-content {
+    padding-top: 5px;
     overflow-y: auto;
     overflow-x: hidden;
     height: calc(100vh - 210px);
