--- a/src/features/Container/Protocols/LabData/LabData.scss
+++ b/src/features/Container/Protocols/LabData/LabData.scss
@@ -227,5 +227,10 @@
     right: 0;
     margin-left: auto;
     margin-right: auto;
+    top: 62%;
+    svg {
+      margin: 0;
+      height: 18px;
+    }
   }
 }
