--- a/src/features/Container/Protocols/BladeLeft/BladeLeft.scss
+++ b/src/features/Container/Protocols/BladeLeft/BladeLeft.scss
@@ -2,6 +2,15 @@
   .toc-wrapper {
     height: 100%;
     overflow-y: overlay;
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      font-size: 14px;
+      font-weight: 400;
+    }
   }
   .MuiPaper-root div:nth-last-child(2) {
     padding-right: 0 !important;
