--- a/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
+++ b/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
@@ -8,6 +8,9 @@
   flex-direction: column;
   position: relative;
   padding-right: 60px;
+  &.no-padding {
+    padding-right: 0px;
+  }
   .accordion_details_loader {
     height: 60vh;
     // right: 260px;
@@ -92,7 +95,7 @@
     p.header {
       font-weight: bold;
     }
-    .content-linkref{
+    .content-linkref {
       display: flex;
     }
   }
