--- a/src/features/Container/Protocols/CustomComponents/Dropdown/style.scss
+++ b/src/features/Container/Protocols/CustomComponents/Dropdown/style.scss
@@ -1,6 +1,9 @@
 .dropdown {
   position: relative;
   display: inline-block;
+  &.symbol-dropdown{
+    position: initial;
+  }
   .dropbtn {
     background-color: #fff;
     &:not(:disabled){
