See More Error with Clear cookie on Logout

--- a/src/features/Container/Dashboard/Pipeline/pipelineModal.scss
+++ b/src/features/Container/Dashboard/Pipeline/pipelineModal.scss
@@ -1,6 +1,13 @@
 .show-running-status {
   display: flex;
   flex-direction: column;
+  .wf-more-error {
+    display: flex;
+    justify-content: flex-end;
+    color: #00487a;
+    font-size: 14px;
+    margin-top: 10px;
+  }
   .running-see-more {
     font-size: 12px;
     color: blue;
