--- a/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
+++ b/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
@@ -80,6 +80,7 @@
     min-height: 376px;
     .Preferred-txt {
       color: #0768fd;
+      cursor: pointer;
     }
     .enriched-txt {
       color: #ff9300;
