--- a/src/features/Container/Protocols/DigitizedPanel/ActionMenu.scss
+++ b/src/features/Container/Protocols/DigitizedPanel/ActionMenu.scss
@@ -12,7 +12,7 @@
     margin-right: 0;
     bottom: 30px;
     margin-top: 30px;
-    height: 100%
+    height: 100%;
   }
   .open-close {
     display: flex;
@@ -29,7 +29,7 @@
   }
   .menu-items {
     background: #e7f2ff;
-    width: 176px;
+    width: 190px;
     height: 100%;
 
     .btn-icons {
