--- a/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
+++ b/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
@@ -4,6 +4,7 @@
   font-size: 16px;
   line-height: 1.4;
   text-align: justify;
+  word-break: break-word;
   display: flex;
   flex-direction: column;
   position: relative;
@@ -23,6 +24,14 @@
         h1 {
           padding: 4px 10px;
           margin-right: 10px;
+          text-align: left;
+        }
+        h2,
+        h3,
+        h4,
+        h5,
+        h6 {
+          text-align: left;
         }
       }
     }
@@ -147,7 +156,6 @@
 }
 
 .menu-wrapper {
-  width: 12%;
   height: 100%;
   display: flex;
   position: absolute;
