Added code for preferred terms display style and cpt removal

--- a/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
+++ b/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
@@ -81,6 +81,7 @@
     .Preferred-txt {
       color: #0768fd;
       cursor: pointer;
+      text-transform: capitalize;
     }
     .enriched-txt {
       color: #ff9300;
