fixed minor issue of right blade css

--- a/src/features/Container/Protocols/BladeRight/BladeRight.scss
+++ b/src/features/Container/Protocols/BladeRight/BladeRight.scss
@@ -71,7 +71,7 @@ button:hover {
   width: 160px;
   padding: 10px 0 3px 0;
   text-decoration: none;
-  color: #2b2b2b !important;
+  color: blue !important;
 }
 
 a:hover {
