--- a/src/features/Container/Protocols/SOA/SOA.scss
+++ b/src/features/Container/Protocols/SOA/SOA.scss
@@ -9,6 +9,10 @@
 .soa-container {
   display: flex;
 }
+
+.soa-container .ag-theme-alpine {
+  height: 180px !important;
+}
 .arrange-panel-container {
   display: flex;
   background: rgb(16 85 135);
