Normalized SOA Column Css issue Fixes

--- a/src/features/Container/Protocols/SOA/SOA.scss
+++ b/src/features/Container/Protocols/SOA/SOA.scss
@@ -112,3 +112,16 @@
 .cursor-default {
   cursor: default;
 }
+.header-empty-cell {
+  width: 200px;
+  height: 50px;
+  display: inline-block;
+}
+.soa-footergrid-container {
+  width: 100%;
+  height: 100%;
+}
+.soa-maingrid-container {
+  height: 500px;
+  width: 100%;
+}
