Normalized SOA Column Css issue Fixes

--- a/src/features/Container/Protocols/SOA/SOA.scss
+++ b/src/features/Container/Protocols/SOA/SOA.scss
@@ -9,18 +9,10 @@
 .soa-container {
   display: flex;
 }
-
-.soa-container {
-  .ag-theme-alpine {
-    height: 800px;
-  }
-}
-.footer-ontainer {
-  height: 300px !important;
-}
 .arrange-panel-container {
   display: flex;
   background: rgb(16 85 135);
+  margin-right: 25px;
 }
 .arrange-panel {
   display: flex;
@@ -107,14 +99,29 @@
   display: flex;
   align-items: center;
 }
-.header-editing-Item {
-  width: 200px;
-  height: 25px;
-  position: absolute;
+.ag-cell-inline-editing {
+  input {
+    width: 95%;
+    height: 95%;
+  }
 }
+
 .base-column {
   background-color: red;
 }
 .cursor-default {
   cursor: default;
+}
+.header-empty-cell {
+  width: 200px;
+  height: 50px;
+  display: inline-block;
+}
+.soa-footergrid-container {
+  width: 100%;
+  height: 100%;
+}
+.soa-maingrid-container {
+  height: 500px;
+  width: 100%;
 }
