--- a/src/features/Container/Protocols/CustomComponents/PDTable/Components/table.scss
+++ b/src/features/Container/Protocols/CustomComponents/PDTable/Components/table.scss
@@ -38,6 +38,7 @@
   box-sizing: border-box;
   min-width: 100px;
   width: 100%;
+  position: relative;
 }
 .content-table-wrapper {
   border: 1px solid #dadada;
@@ -188,7 +189,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: 30px;
+  margin-left: calc(50% - 9px);
 }
 .button-container {
   display: flex;
