--- a/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
+++ b/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
@@ -89,6 +89,7 @@
     min-height: 376px;
     .Preferred-txt {
       color: #0768fd;
+      cursor: pointer;
     }
     .enriched-txt {
       color: #ff9300;
