--- a/src/features/Container/Protocols/SOA/SOA.scss
+++ b/src/features/Container/Protocols/SOA/SOA.scss
@@ -1,6 +1,8 @@
 .soa-content-holder {
   margin: 16px 48px 0px 5px;
   width: 95%;
+  height: 100%;
+  overflow: auto;
   .side-nav {
     width: 200px;
     margin-left: 20px;
@@ -131,7 +133,7 @@
     margin-bottom: 100px;
   }
   .soa-maingrid-container {
-    height: 500px;
+    height: 700px;
     width: 100%;
   }
   .ag-overlay-wrapper {
