--- a/src/features/Container/Protocols/SOA/SOA.scss
+++ b/src/features/Container/Protocols/SOA/SOA.scss
@@ -1,7 +1,7 @@
 .soa-content-holder {
   margin: 16px 48px 0px 5px;
   width: 95%;
-  height: 100%;
+  height: calc(100vh - 180px);
   overflow: auto;
   .side-nav {
     width: 200px;
