--- a/src/features/Container/Protocols/CustomComponents/PDTable/Components/table.scss
+++ b/src/features/Container/Protocols/CustomComponents/PDTable/Components/table.scss
@@ -76,6 +76,9 @@
   font-size: 12px;
   padding: 5px;
   outline: none;
+  ul{
+    padding-left: 17px;
+  }
 }
 .Preferred-txt {
   color: #0768fd;
