Defect 806 bullet point issue in table

--- a/src/features/Container/Protocols/CustomComponents/PDTable/Components/table.scss
+++ b/src/features/Container/Protocols/CustomComponents/PDTable/Components/table.scss
@@ -73,6 +73,12 @@
 }
 .editable-span {
   width: 90%;
+  font-size: 12px;
+  padding: 5px;
+  outline: none;
+  ul{
+    padding-left: 17px;
+  }
 }
 .Preferred-txt {
   color: #0768fd;
