Added error message

--- a/src/features/Container/Protocols/SOA/SOA.scss
+++ b/src/features/Container/Protocols/SOA/SOA.scss
@@ -139,4 +139,10 @@
   .ag-overlay-wrapper {
     display: none;
   }
+  .message {
+    height: 400px;
+    justify-content:center;
+    align-items: center;
+    display: flex;
+  }
 }
