--- a/src/features/Container/Protocols/CustomComponents/ImageUploader.scss
+++ b/src/features/Container/Protocols/CustomComponents/ImageUploader.scss
@@ -36,11 +36,12 @@
   margin-top: 10px;
   margin-bottom: 10px;
   margin-right: 20px;
-
+  min-height: 40px;
   position: relative;
 
   .rich-text-img {
-    width: 50%;
+    max-width: 100%;
+    height: auto;
   }
 }
 
@@ -50,7 +51,7 @@
   right: 0;
   left: 0;
   bottom: 5px;
-  width: 50%;
+  max-width: 100%;
   display: flex;
   justify-content: flex-end;
   align-items: flex-start;
