--- a/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
+++ b/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
@@ -181,3 +181,14 @@
   height: 100%;
   top: 0;
 }
+
+.sanitize-content-wrapper > div {
+  display: inherit;
+}
+
+.ref-link {
+  color: blue;
+  text-decoration: underline;
+  cursor: pointer;
+  font-weight: bold;
+}
