Metadata hard delete

--- a/src/features/Container/Protocols/MetaData/MetaData.scss
+++ b/src/features/Container/Protocols/MetaData/MetaData.scss
@@ -246,6 +246,17 @@
 .crossButton {
   color: red !important;
 }
+.trashButton {
+  font-size: 20px;
+}
+.cross-Button-admin {
+  font-size: 20px;
+  color: red !important;
+}
+.trashButtonsvg {
+  width: 30px !important;
+  margin-bottom: 2px;
+}
 .keySelect {
   width: 215px;
   margin-top: -10px;
