--- a/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
+++ b/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
@@ -106,6 +106,18 @@
     }
     .content-linkref {
       display: flex;
+      &.inline-segment{
+        float: left;
+        .img-container-read-mode{
+          min-height: 0;
+          min-width: 0;
+          margin: 0;
+          padding: 0 4px;
+        }
+      }
+      &.inline-segment + div:not(.inline-segment){
+        clear: left;
+      }
     }
   }
 }
