--- a/src/features/Container/Protocols/DIPA/DipaViewStructure.scss
+++ b/src/features/Container/Protocols/DIPA/DipaViewStructure.scss
@@ -57,8 +57,11 @@
   margin-top: 10px;
   display: flex;
 }
-.save-button {
-  margin-top: 10px;
+.iconbutton{
+  padding-right: 10px;
+}
+.iconbutton:hover,.pencil-menubutton:hover,.save-menubutton:hover,.trash-icon:hover,.plus-menubutton:hover:hover{
+  background-color: #cfdef1;
 }
 .pencil-button-icon {
   opacity: 0.45;
@@ -140,7 +143,7 @@
   align-items: center;
   .trash-icon {
     margin-left: 15px;
-    margin-top: 5px;
+    margin-top: 2px;
   }
 }
 .popover {
