--- a/src/features/Container/Protocols/CustomComponents/renderContent.scss
+++ b/src/features/Container/Protocols/CustomComponents/renderContent.scss
@@ -25,5 +25,13 @@
   .contentEditable.content_header {
     font-weight: bold;
     margin-bottom: 15px;
+    h2 {
+      min-height: 32px;
+    }
+    &:empty:before {
+      content: attr(data-placeholder);
+      font-size: 26px;
+      margin-bottom: 15px;
+    }
   }
 }
