--- a/src/features/Container/Protocols/Documents.scss
+++ b/src/features/Container/Protocols/Documents.scss
@@ -12,6 +12,26 @@
     height: 20px;
   }
 }
+.modal-browser {
+  height: 100%;
+  width: 100%;
+  border: 1px solid grey;
+}
+[class*='MuiDialogContent-root'] {
+  overflow-y: unset;
+}
+[class*='MuiDialog-paper'] {
+  margin: unset;
+  position: relative;
+  max-width: none;
+  overflow-y: auto;
+}
+[class*='MuiDialog-paperWidthSm'] {
+  max-width: 100%;
+}
+[class*='MuiDialog-paperScrollPaper'] {
+  max-height: 100%;
+}
 .compare-main-button {
   svg {
     height: 16px;
@@ -55,6 +75,9 @@
       margin-right: 7px;
     }
   }
+  [class*='MuiDialog-paperWidthSm'] {
+    max-width: 100%;
+  }
 
   .source-document-tab {
     width: 100%;
@@ -63,7 +86,7 @@
     table {
       margin-bottom: 15px;
     }
-    [class^="Table-tableWrapper-"] {
+    [class^='Table-tableWrapper-'] {
       overflow: hidden;
     }
     tbody tr:last-child {
@@ -80,7 +103,7 @@
   }
   .associate-document-tab {
     width: 100%;
-    [class^="Table-tableWrapper-"] {
+    [class^='Table-tableWrapper-'] {
       overflow-x: hidden;
     }
     .hyperlink {
