--- a/src/features/Container/Protocols/Documents.scss
+++ b/src/features/Container/Protocols/Documents.scss
@@ -15,7 +15,7 @@
 .modal-browser {
   height: 100%;
   width: 100%;
-  border: 1px solid grey;
+  border: 1px solid rgb(208 207 207);
 }
 [class*='MuiDialogContent-root'] {
   overflow-y: unset;
